change picture name

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@ $('.circle').height($('.circle').width());
        <h1><a>Susan Lingshan Jiang</a></h1>
       <div id="donutchart" class="circle" style="width:85%;margin:0 auto auto auto;z-index: 0" >
       </div>
-       <img src="../images/jane.jpg" class="btn btn-default" style="width:220px;height:220px;border-radius: 100%;top:278px;
+       <img src="../images/me.jpg" class="btn btn-default" style="width:220px;height:220px;border-radius: 100%;top:278px;
        left:40%;z-index: 1;position: absolute;">
 </div>
 </body>
