--- a/public/index.html
+++ b/public/index.html
@@ -61,9 +61,9 @@ $('.circle').height($('.circle').width());
           legend: 'right',
           width: '100%',
           chartArea:{
-              top:20,
-              left:256,
-               width: '80%',
+              top:10,
+              // left:256,
+               width: '100%',
            }       
         };
 
@@ -75,14 +75,20 @@ $('.circle').height($('.circle').width());
 <body>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
+  <!-- <img class="pull-left btn" src="../images/mylogo.png" style="width:80px;height:75px;"> -->
   </div>
 </nav>
-<div class="container vcenter" style="position: relative;">
-       <h1><a>Susan Lingshan Jiang</a></h1>
-      <div id="donutchart" class="circle" style="width:85%;margin:0 auto auto auto;z-index: 0" >
+<div class="container vcenter">
+      <div class="h1 affix" style="z-index: 1;position:fixed;left:450px;top:45px;width:500px;">
+          <a> 
+            <img src="../images/mylogo.jpg" style="width:80px;height:75px;">
+             Susan Lingshan Jiang
+          </a>
       </div>
-       <img src="../images/me.jpg" class="btn btn-default" style="width:220px;height:220px;border-radius: 100%;top:278px;
-       left:40%;z-index: 1;position: absolute;">
+      <div id="donutchart" class="circle" style="position:fixed;left:400px;top:165px;
+      width:900px;margin:0 auto auto auto;z-index: 0" >
+      </div>
+       <img src="../images/me.jpg" class="btn btn-default" style="width:250px;height:250px;border-radius: 100%;top:333px;left:555px;z-index: 1;position:fixed;">
 </div>
 </body>
 </html>
