questions.html two programming questions

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,10 @@
    <head>
       <meta charset="utf-8">
       <title> My Portfolio</title>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-     <script src="../javascripts/bootstrap.min.js"></script>
-     <link rel="stylesheet" href="../stylesheets/bootstrap.min.css">
- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
-  
+      <script src="../static/javascripts/jquery-1.12.4.min.js"></script>
+      <script src="../static/javascripts/bootstrap.min.js"></script>
+     <link rel="stylesheet" href="../static/stylesheets/bootstrap.min.css">
+     <script type="text/javascript" src="../staticjavascripts/loader.js"></script>
 </head>
 <style>
 
@@ -59,7 +57,7 @@ $('.circle').height($('.circle').width());
           // title: 'My Daily Activities',
           pieHole: 0.5,
           legend: 'right',
-          width: '100%',
+          width: '1000px',
           chartArea:{
               top:10,
               // left:256,
@@ -79,9 +77,9 @@ $('.circle').height($('.circle').width());
   </div>
 </nav>
 <div class="container vcenter">
-      <div class="h1 affix" style="z-index: 1;position:fixed;left:450px;top:45px;width:500px;">
+      <div class="h1 affix" style="z-index: 1;position:fixed;left:400px;top:45px;width:500px;">
           <a> 
-            <img src="../images/mylogo.jpg" style="width:80px;height:75px;">
+            <!-- <img src="../images/mylogo.jpg" style="width:80px;height:75px;"> -->
              Susan Lingshan Jiang
           </a>
       </div>
