--- a/public/questions.html
+++ b/public/questions.html
@@ -120,7 +120,6 @@ function IsPalindrome(str){
     
    var left = 0;
    var right = str.length - 1;
-   var result = true;
    while(left < right){
 
       //if both str[left] and str[right] are alphanumeric
@@ -148,7 +147,7 @@ function IsPalindrome(str){
     }
    }
    //if left >= right
-   return result;
+   return true;
 
 };
 
