--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title> About Me</title>
+      <title> Susan Jiang</title>
       <script src="../static/javascripts/jquery-1.12.4.min.js"></script>
       <script src="../static/javascripts/bootstrap.min.js"></script>
      <link rel="stylesheet" href="../static/stylesheets/bootstrap.min.css">
