--- a/public/index.html
+++ b/public/index.html
@@ -60,8 +60,8 @@ $(document).ready(function(){
       <div id="section1" class="col-lg-12 vcenter section" style="background-color: #99ffff">
          <h1><strong> <i>My Interests </i></strong></h1>
         <div id="donutchart" class="" style="width:70%;margin:auto;">
-        <!-- style="position:fixed;left:400px;top:165px;
-        width:900px;margin:0 auto auto auto;z-index: 0" > -->
+        style="position:fixed;left:400px;top:165px;
+        width:900px;margin:0 auto auto auto;z-index: 0" >
         </div>
       </div>
        <div id="section2" class="col-lg-12 vcenter section" style="background-color: yellow">
