--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,8 @@
                 <a href="https://www.linkedin.com/in/susanjiang03/">linkedin.com/in/susanjiang03</a>
               </h4>
             </div>
+            <div id="donutchart" class="">
+            </div>
           </div>
         </div>
             <!-- Project One -->
