--- a/public/index.html
+++ b/public/index.html
@@ -96,14 +96,27 @@
               <h3 ><b>Susan Lingshan Jiang</b></h3>
               <h4><a><i class="fa fa-envelope"></i>&nbsp;susanjiang03@gmail.com</a></h4>
               <h4><i class="fa fa-phone"></i>&nbsp;+1 (646) 247-0567</h4>
-              <h4>
-                <i class="fa fa-github" aria-hidden="true"></i>&nbsp;
-                <a href="https://github.com/susanjiang03">github.com/susanjiang03</a>
-              </h4>
-              <h4>
+              <div>
+                <a class="btn" href="https://github.com/susanjiang03" style="font-size:2.5vw">
+                  <i class="fa fa-github" aria-hidden="true"></i>
+                </a>
+                <a class="btn" href="https://www.linkedin.com/in/susanjiang03/" style="font-size:2.5vw">
+                  <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                </a>
+                <a class="btn" href="https://twitter.com/susanjiang03" style="font-size:2.5vw">
+                  <i class="fa fa-twitter" aria-hidden="true"></i>
+                </a>
+                 <a class="btn" href="https://www.facebook.com/susanjiang03" style="font-size:2.5vw">
+                  <i class="fa fa-facebook" aria-hidden="true"></i>
+                </a>
+              </div>
+              <!-- <h4>
                 <i class="fa fa-linkedin-square" aria-hidden="true"></i>&nbsp;
                 <a href="https://www.linkedin.com/in/susanjiang03/">linkedin.com/in/susanjiang03</a>
               </h4>
+              <h4>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+              </h4> -->
             </div>
             <div id="donutchart" class="">
             </div>
